# NetlistIO

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
netlistio/: __init__.py  cli.py  reporting.py  test.ipynb  test.py
netlistio/graph_analysis/: __init__.py  circuit_graph.py
netlistio/ingestor/: __init__.py  common.py  compiler.py  factory.py  flattener.py  includes.py  library.py  linker.py  parser.py  reader.py  registry.py  scanner.py  spice.py  spice_resolver.py
netlistio/models/: __init__.py  format.py  generic.py  linking.py  parsing.py  spice.py
scripts/: setup_data.sh
tests/: basic.py  conftest.py  test_chunk_parser.py  test_circuit_graph.py  test_cli.py  test_compiler.py  test_e2e.py  test_line_parser.py  test_linker.py  test_models.py  test_parser.py  test_reader.py  test_registry.py  test_reporting.py  test_scanner.py
tests/data/synthetic/: small_basic.sp
tests/data/synthetic/models/: test.sp
tests/fixtures/: continuation.sp  hierarchy.sp  lib_sections.lib  library_only.sp  minimal.sp  models.sp  mosfets.sp  with_include.sp
tests/fixtures/align/: cascode_current_mirror_ota.sp  current_mirror_ota.sp  five_transistor_ota.sp  telescopic_ota.sp
tests/integration/: test_align_graphs.py
