[tool.poetry]
name = "netlistio"
version = "0.1.0"
description = "High-performance parallel netlist parser"
authors = ["Austin Rhodes <a18rhodes@gmail.com>"]
readme = "README.md"
packages = [{ include = "netlistio" }]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.11"
click = "^8.3.1"
networkx = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^24.3"
pylint = "^4.0.4"
isort = "^7.0.0"
mypy = "^1.19.1"
types-networkx = "^3.6.1.20251220"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=netlistio --cov-report=term-missing"
