[tool.poetry]
name = "netlistio"
version = "0.1.0"
description = "High-performance parallel netlist parser"
authors = ["Austin Rhodes <a18rhodes@gmail.com>"]
readme = "README.md"
packages = [{ include = "netlistio" }]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.11"
click = "^8.3.1"
networkx = "^3.6.1"
matplotlib = { version = "^3.8", optional = true }
pydot = { version = "^3.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-randomly = "^3.15"
hypothesis = "^6.0"
black = { extras = ["jupyter"], version = "^25.12.0" }
pylint = "^4.0.4"
isort = "^7.0.0"
mypy = "^1.19.1"
types-networkx = "^3.6.1.20251220"
jupyter = "^1.1.1"
ipykernel = "^7.1.0"
python-semantic-release = "^9.0"
matplotlib = "^3.8"
pydot = "^3.0"

[tool.poetry.extras]
viz = ["matplotlib", "pydot"]
# torch and torch-geometric are installed via pip in the Dockerfile due to the
# custom PyTorch CPU wheel index; they are listed here for documentation only.
pyg = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
min-public-methods = 1
max-args = 7
max-attributes = 10
max-positional-arguments = 7

[tool.pylint.messages_control]
disable = [
    "R1725",   # super-with-arguments: mandatory for Python 3.11 @dataclass(slots=True) compat
]

[tool.poetry.scripts]
netlistio = "netlistio.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage is opt-in to keep the default dev iteration fast; CI runs:
#   pytest --cov=netlistio --cov-report=term-missing --cov-fail-under=100
markers = [
    "integration: requires external data from scripts/setup_data.sh (run with --integration)",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
upload_to_vcs_release = true
upload_to_pypi = false
